syntax = "proto3";
package event;

import "events/status.proto";
import "aggregates/rental/cart_item.proto";
import "aggregates/user/user.proto";

/* 
  rental service command
*/
enum RentalServiceCommandTopic{
    ADD_CART_ITEM = 0;
    RETRIEVE_CART_ITEMS = 1;
    DELETE_CART_ITEM = 2;
    UPDATE_CART_ITEM = 3;
  }

message AddCartItem {
    string uid = 1;
    string item_uuid = 3;
    int32 item_amount = 4;
    string kudaki_token = 5;
    int64 duration_from = 6;
    int32 duration = 7;
}

message RetrieveCartItems {
    string uid = 1;
    string kudaki_token = 2;
    string cart_uuid = 3;
    int32 offset = 4;
    int32 limit = 5;
    bytes result_schema = 6;
}

message DeleteCartItem {
    string uid = 1;
    string kudaki_token = 2;
    string cart_item_uuid = 3;
}

message UpdateCartItem {
    string uid = 1;
    string kudaki_token = 2;
    int32 total_item = 3;
    string cart_item_uuid = 4;
}

/* 
  rental service events
*/
enum RentalServiceEventTopic{
    CART_ITEM_ADDED = 0;
    CART_ITEMS_RETRIEVED = 1;
    CART_ITEM_DELETED = 2;
    CART_ITEMS_UPDATED =  3;
  }

message CartItemAdded {
    string uid = 1;
    aggregates.rental.CartItem cart_item = 2;
    event.Status event_status = 4;
    AddCartItem add_cart_item = 5;
    aggregates.user.User requester = 6;
}

message CartItemsRetrieved {
    string uid = 1;
    aggregates.user.User requester = 2;
    event.Status event_status = 3;
    // aggregates.rental.Cart cart = 4;
    RetrieveCartItems retrieve_cart_items = 6;
    bytes result = 7;
}

message CartItemDeleted {
    string uid = 1;
    aggregates.user.User user = 2;
    event.Status event_status = 3;
    DeleteCartItem delete_cart_item = 4;
    aggregates.rental.CartItem cart_item = 5;
}

message CartItemsUpdated {
    string uid = 1;
    aggregates.user.User user = 2;
    repeated aggregates.rental.CartItem initial_cart_item = 3;
    UpdateCartItem update_cart_item = 4;
    event.Status event_status = 5;
    repeated aggregates.rental.CartItem updated_cart_item = 6;
}